--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
+  hydrated_bloc: ^9.1.0
+  path_provider: ^2.0.14
   pie_chart: ^5.3.2
 
 
