--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   hydrated_bloc: ^9.1.0
   path_provider: ^2.0.14
   pie_chart: ^5.3.2
+  modal_bottom_sheet: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
