--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   path_provider: ^2.0.14
   pie_chart: ^5.3.2
   modal_bottom_sheet: ^2.1.2
+  pull_down_button: ^0.9.1
 
 
   # The following adds the Cupertino Icons font to your application.
